--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -36,5 +40,6 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {}
 } 
